little fix, wrap-active fixed

--- a/pro-tour_new/style.css
+++ b/pro-tour_new/style.css
@@ -1869,6 +1869,7 @@ li.menu-item-has-children {
   overflow: auto;
 }
 .wrap--active {
+  position: fixed;
   overflow: hidden;
   pointer-events: none;
   filter: blur(5px);
